[gd_scene load_steps=13 format=2]

[ext_resource path="res://Fonts/Montreal-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://Inventory.gd" type="Script" id=3]
[ext_resource path="res://Art/icecream.png" type="Texture" id=4]
[ext_resource path="res://Art/pizza-64x64.png" type="Texture" id=5]
[ext_resource path="res://Art/inv_hotbar.png" type="Texture" id=6]
[ext_resource path="res://Art/health_sprite.png" type="Texture" id=7]
[ext_resource path="res://Fonts/Montreal-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Art/rice_bowl.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 8 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="NextWaveButton" type="Button" parent="."]
margin_right = 183.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 1 )
text = "Next Wave"

[node name="WaveNumber" type="Label" parent="."]
margin_left = 823.0
margin_top = 36.0
margin_right = 919.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 2 )
text = "Wave: 0"

[node name="Inventory" type="Node2D" parent="."]
position = Vector2( 520, 998 )
script = ExtResource( 3 )

[node name="Hotbar" type="Sprite" parent="Inventory"]
texture = ExtResource( 6 )

[node name="IcecreamIcon" type="Sprite" parent="Inventory"]
position = Vector2( -274, -28.9999 )
scale = Vector2( 0.794445, 0.675 )
texture = ExtResource( 4 )

[node name="PizzaIcon" type="Sprite" parent="Inventory"]
position = Vector2( -418, -29 )
texture = ExtResource( 5 )

[node name="RiceIcon" type="Sprite" parent="Inventory"]
position = Vector2( -144, -30 )
scale = Vector2( 0.218345, 0.2575 )
texture = ExtResource( 9 )

[node name="PizzaLabel" type="Label" parent="Inventory"]
margin_left = -448.0
margin_top = 2.0
margin_right = -408.0
margin_bottom = 16.0
rect_scale = Vector2( 1.5, 1.5 )
text = "0"
align = 1

[node name="IcecreamLabel" type="Label" parent="Inventory"]
margin_left = -304.0
margin_top = 2.0
margin_right = -264.0
margin_bottom = 16.0
rect_scale = Vector2( 1.5, 1.5 )
text = "0"
align = 1

[node name="RiceLabel" type="Label" parent="Inventory"]
margin_left = -176.0
margin_top = 2.0
margin_right = -136.0
margin_bottom = 16.0
rect_scale = Vector2( 1.5, 1.5 )
text = "0"
align = 1

[node name="HotKey 1 Label" type="Label" parent="Inventory"]
margin_left = -496.0
margin_top = -42.0
margin_right = -456.0
margin_bottom = -11.0
rect_scale = Vector2( 1.2, 1.00505 )
text = "1:
"
align = 1

[node name="HotKey 2 Label" type="Label" parent="Inventory"]
margin_left = -353.0
margin_top = -43.0
margin_right = -313.0
margin_bottom = -12.0
rect_scale = Vector2( 1.2, 1.00505 )
text = "2:
"
align = 1

[node name="HotKey 3 Label" type="Label" parent="Inventory"]
margin_left = -219.0
margin_top = -44.0
margin_right = -179.0
margin_bottom = -13.0
rect_scale = Vector2( 1.2, 1.00505 )
text = "3:
"
align = 1

[node name="GoldLabel" type="Label" parent="Inventory"]
margin_left = 328.0
margin_top = -37.0
margin_right = 368.0
margin_bottom = -6.0
rect_scale = Vector2( 1.2, 1.00505 )
text = "25"
align = 1

[node name="GoldInfo" type="Label" parent="Inventory"]
margin_left = 255.0
margin_top = -37.0
margin_right = 295.0
margin_bottom = -6.0
rect_scale = Vector2( 1.2, 1.00505 )
text = "Gold:"
align = 1

[node name="Instructions" type="Label" parent="Inventory"]
margin_left = -512.0
margin_top = 2.0
margin_right = -472.0
margin_bottom = 18.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Stock:"
align = 1
valign = 1

[node name="HealthBar" type="Sprite" parent="Inventory"]
texture = ExtResource( 7 )

[node name="EquipHighlight" type="Label" parent="Inventory"]
margin_left = -304.0
margin_top = -54.0
margin_right = -234.0
margin_bottom = 21.0
custom_colors/font_color = Color( 1, 0.937255, 0, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[connection signal="pressed" from="NextWaveButton" to="." method="_on_NextWaveButton_pressed"]
