[gd_scene load_steps=10 format=2]

[ext_resource path="res://Art/chefHat64x46.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Art/inv_hotbar.png" type="Texture" id=3]
[ext_resource path="res://Inventory.gd" type="Script" id=4]
[ext_resource path="res://Art/pizza-64x64.png" type="Texture" id=5]
[ext_resource path="res://Art/health_sprite.png" type="Texture" id=6]
[ext_resource path="res://Art/icecream.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 11.5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D" groups=["players"]]
pause_mode = 2
position = Vector2( 558, 291 )
collision_mask = 6
script = ExtResource( 2 )
speed = 140.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3, 0.5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -3, 1 )
scale = Vector2( 0.515385, 0.515385 )
frames = SubResource( 2 )

[node name="Inventory" type="Node2D" parent="."]
position = Vector2( 512, 744 )
script = ExtResource( 4 )

[node name="Hotbar" type="Sprite" parent="Inventory"]
texture = ExtResource( 3 )

[node name="Icecream" type="Sprite" parent="Inventory"]
position = Vector2( -274, -28.9999 )
scale = Vector2( 0.794445, 0.675 )
texture = ExtResource( 7 )

[node name="PizzaIcon" type="Sprite" parent="Inventory"]
position = Vector2( -418, -29 )
texture = ExtResource( 5 )

[node name="PizzaLabel" type="Label" parent="Inventory"]
margin_left = -443.0
margin_right = -403.0
margin_bottom = 14.0
rect_scale = Vector2( 1.2, 1.00505 )
text = "0"
align = 1

[node name="IcecreamLabel" type="Label" parent="Inventory"]
margin_left = -298.0
margin_top = -1.0
margin_right = -258.0
margin_bottom = 13.0
rect_scale = Vector2( 1.2, 1.00505 )
text = "0"
align = 1

[node name="HotKey 1 Label" type="Label" parent="Inventory"]
margin_left = -496.0
margin_top = -42.0
margin_right = -456.0
margin_bottom = -11.0
rect_scale = Vector2( 1.2, 1.00505 )
text = "1:
"
align = 1

[node name="HotKey 2 Label" type="Label" parent="Inventory"]
margin_left = -353.0
margin_top = -43.0
margin_right = -313.0
margin_bottom = -12.0
rect_scale = Vector2( 1.2, 1.00505 )
text = "2:
"
align = 1

[node name="GoldLabel" type="Label" parent="Inventory"]
margin_left = 328.0
margin_top = -37.0
margin_right = 368.0
margin_bottom = -6.0
rect_scale = Vector2( 1.2, 1.00505 )
text = "25"
align = 1

[node name="GoldInfo" type="Label" parent="Inventory"]
margin_left = 255.0
margin_top = -37.0
margin_right = 295.0
margin_bottom = -6.0
rect_scale = Vector2( 1.2, 1.00505 )
text = "Gold:"
align = 1

[node name="Instructions" type="Label" parent="Inventory"]
margin_left = -509.0
margin_top = 1.0
margin_right = -469.0
margin_bottom = 32.0
rect_scale = Vector2( 1.2, 1.00505 )
text = "Stock:
"
align = 1

[node name="HealthBar" type="Sprite" parent="Inventory"]
texture = ExtResource( 6 )

[connection signal="update_gold" from="." to="Inventory" method="_on_Player_update_gold"]
[connection signal="update_health" from="." to="Inventory" method="_on_Player_update_health"]
[connection signal="update_inventory" from="." to="Inventory" method="_on_Player_update_inventory"]
